
Changes for 0.6.2.2
-------------------
* transitionPlot - fixed arrow size and empty boxes
* outputInt now defaults to the ',' formatting according to the English language. It also has no-breaking space if html option is set. It can also handle complex vector/matrix input.
* describeMean now allows for custom plus minus sign
* describe* now use the outputInt with the default english settings

Changes for 0.6.2.1
-------------------
* bezierArrowSmplGradient changed name to just bezierArrowGradient
* Added visual tests and debugged the bezierArrowGradient/transitionPlots
* Externalized all internal functions of the transitionplot
* Added proportions for the transitionplot
* Managed thanks to Baptiste Auguié help on Stack Overflow I know now how to calculate the height of axisGrobs - useful both in the forestplot2 and the transitionPlot functions
* Fixed the adjustment of the xlabel, the lineheight argument, the viewports for the forestplot2 function
* Simplified the transitionPlot defaults
* Fixed a gradient bug in bezierArrowGradient

Changes for 0.6.2.0
-------------------
* Added the viewer for htmlTable allowing for direct visualisation in RStudio of the tables. Outside RStudio the utils::browseURL is used.
* htmlTable added table spanner functionality, some man-page update, removed the default NULL arguments in favor of the missing() funciton, and a few minor bugfixes.

Changes for 0.6.1.1
-------------------
* The bezierArrowSmpl now uses "mm" internally instead of the default "npc" - this improves the rendering as the "npc" is dependent on the axis. A few adjustments to arrow functions were also added.
* Bugfixes for the bezierArrowSmplGradient.
* Bugfixed missing data for getDescriptionStats and generated a test-file in order to check most combinations that they work
* Fixed the legend-bug for forestplot2 when using points

Changes for 0.6.1.0
--------------------
* Added legend markers option for the forestplot2 function

Changes for 0.6.0.2