@@ -833,7 +833,19 @@ setClass("htmlTable", contains = "character")
 #'  the table within that is automatically envoced unless you have the knitr 
 #'  package loaded. Set this to \code{FALSE} if you want to remove that 
 #'  functionality. 
-print.htmlTable<- function(x, useViewer = TRUE, ...){
+print.htmlTable<- function(x, useViewer, ...){
+  # Since the print may be called from another print function
+  # it may be handy to allow functions to use attributes for the
+  # useViewer parameter
+  if (missing(useViewer)){
+    if ("useViewer" %in% names(attributes(x)) &&
+      is.logical(attr(x, "useViewer"))){
+        useViewer <- attr(x, "useViewer")
+    }else{
+      useViewer <- TRUE
+    }
+  }
+        
   # Don't use viewer if in knitr
   if (useViewer &&
         !"package:knitr" %in% search()){
